--- a/render.yaml
+++ b/render.yaml
@@ -1,7 +1,7 @@
 
 services:
   - type: web
-    name: serverlist-backend
+    name: MC-ServerHub
     env: python
     plan: free
     buildCommand: ""
